# flexispot-e7-controller

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: args.rs  command.rs  http.rs  local.rs  main.rs  remote.rs
esp32c3/: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  xtask-config.sample.toml
esp32c3/.cargo/: config.toml
esp32c3/src/: hardware_check.rs  main.rs  rgb_led.rs  wifi.rs
esp32c3/xtask/: Cargo.toml
esp32c3/xtask/src/: main.rs
lib/: Cargo.toml
lib/src/: command.rs  lib.rs
src/: main.rs
web/: Cargo.toml  README.md  e7server.service.sample  e7server.toml.sample
web/src/: lib.rs  main.rs  server.rs
