[workspace]
members = ["cli", "lib", "web"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
authors = ["kaoru <k@warpnine.io>"]
edition = "2021"
repository = "https://github.com/0x6b/flexispot-e7-controller"
version = "0.5.8"

[workspace.dependencies]
clap = { version = "4.5.2", features = ["derive"] }
flexispot_e7_controller_lib = { path = "lib" }
flexispot_e7_controller_web = { path = "web" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
