[workspace]
members = ["cli", "esp32c3", "esp32c3/xtask", "lib", "web"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
authors = ["kaoru <k@warpnine.io>"]
edition = "2021"
repository = "https://github.com/0x6b/flexispot-e7-controller"
version = "0.6.2"

[workspace.dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive", "env"] }
flexispot_e7_controller_lib = { path = "lib" }
flexispot_e7_controller_web = { path = "web" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
