[package]
name = "flexispot_e7_controller_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Control your Flexispot E7 with Raspberry Pi"

[[bin]]
name = "e7"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rppal = "0.16.1"
flexispot_e7_controller_lib.workspace = true
flexispot_e7_controller_web.workspace = true
ureq = { version = "2.9.1", default-features = false, features = ["json"] }
