[package]
name = "esp32c3"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
default-run = "esp32c3"

[[bin]]
name = "esp32c3"
path = "src/main.rs"

[[bin]]
name = "hardware_check"
path = "src/hardware_check.rs"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
anyhow = "1.0.79"
rgb = "0.8.37"
toml-cfg = "0.1.3"

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "0.1.3"
