[package]
name = "esp32c3"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
default-run = "esp32c3"

[[bin]]
name = "esp32c3"
path = "src/main.rs"

[[bin]]
name = "hardware_check"
path = "src/hardware_check.rs"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = "1.0.87"
esp-idf-svc = { version = "0.49.1", default-features = false }
flexispot_e7_controller_lib = { git = "https://github.com/0x6b/flexispot-e7-controller.git", tag = "v0.6.1" }
heapless = "0.8.0"
log = { version = "0.4", default-features = false }
rgb = "0.8.50"

[build-dependencies]
embuild = "0.32.0"
