[package]
name = "flexispot_e7_controller_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Library to control your Flexispot E7 with Raspberry Pi"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[target.'cfg(all(target_os = "linux", target_arch = "arm"))'.dependencies]
rppal = "0.19.0"
