[package]
name = "flexispot_e7_controller_web"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.7.3", default-features = false, features = ["http1", "json", "tokio", "tower-log", "tracing"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.35.1", features = ["full"] }
flexispot_e7_controller_lib.workspace = true
