[package]
name = "flexispot_e7_controller_web"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "e7server"
path = "src/server.rs"

[lib]
name = "flexispot_e7_controller_web"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["http1", "json", "tokio", "tower-log", "tracing"] }
clap.workspace = true
flexispot_e7_controller_lib.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
